--- a/index.html
+++ b/index.html
@@ -88,11 +88,12 @@
 				<hr id='hrdotted' />
 
     </div>
-		<p align = "left"><b><font size="4">Synopsys</font></b>
+		<p align = "left"><b><font size="4">Synopsis</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He's well respectedas a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable - albeit neurotic - best friend. But Mack Dylan carries his share of baggage - a repressed childhood, an inability to express emotions, a failed engagement and a tendency not to deal with
-				</font><br>
+				<p align="justify"><font size=2">
+				<a id="uniqueid" href="Synopsis.html">As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He's well respectedas a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable - albeit neurotic - best friend. But Mack Dylan carries his share of baggage - a repressed
+				</a></font><br>
 			</div>
 				<hr id='hrdotted' />
 
