--- a/index.html
+++ b/index.html
@@ -42,24 +42,24 @@
 				<a id="uniqueid" href="ChristTour.html">Considering his life and death resulted in thousands of years of hysteria and that his recent "resurrection" will surely produce more,
 				The most influential man in human history is surprisingly laid back and seems a bit bemused by the mania he inspires. <p>"Dude, Patti Smith never died for MY sins" cracks
    				</a></font>
-   			</div>
 				<hr id='hrdotted' />
+   			</div>
 
          <p align = "left"><b><font size="4">Joke  Of The Day</font></b>
           	<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">To smooth over her recent negative comments about his  presidency, Hillary Clinton said she and Barack Obama will "Hug-it-Out" next time they meet. Hearing  this, Bill Clinton said he also will "Hug-it-Out" with political rivals Megan Fox, Angelina Jolie, Sophia Vergara, Scarlett Johanson, and that hot waitress who works at The Olive Garden.
 				</font><br>
-			</div>
 				<hr id='hrdotted' />
+			</div>
 
          <p align = "left"><b><font size="4">A Word From Vin Marino</font></b>
           	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, 'The  Larry Sanders Show'. Pizza is yummy and Patti Smith transcends cool - Bye
 				</font></p>
-		  	</div>
 				<hr id='hrdotted' />
+		  	</div>
 
 	</div>
     <div align="justify" style="width: 390px; float:left; margin:4; ">
@@ -71,8 +71,8 @@
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="20140901Editorial.html">Abbott had Costello. Penn has Teller. Mick - Keith. Jonny - Ed. Bonnie even had Clyde. Then how sad was this country's perceived state of affairs that a man with a record of extensive congressional service and unimaginable bravery and patriotism could agree to choose the Alaskan Annie Oakley as his running mate for the most important office on earth?
 				</a></font><br>
-			</div>
 				<hr id='hrdotted' />
+			</div>
 
 		<p align = "left"><b><font size="4">Monthly Feature</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
@@ -84,8 +84,8 @@
    				<br>
 				<br>
    				<br>
-			</div>
 				<hr id='hrdotted' />
+			</div>
 
     </div>
 		<p align = "left"><b><font size="4">Synopsis</font></b>
@@ -94,8 +94,8 @@
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="Synopsis.html">As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He's well respectedas a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable - albeit neurotic - best friend. But Mack Dylan carries his share of baggage - a repressed
 				</a></font><br>
-			</div>
 				<hr id='hrdotted' />
+			</div>
 
 		<p align = "left"><b><font size="4">About The Creators</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
@@ -107,16 +107,18 @@
    				<br>
 				<br>
    				<br>
-			</div>
 				<hr id='hrdotted' />
+			</div>
 
 		<p align = "left"><b><font size="4">Origin</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">The story of "The Mackenzie  Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an air-tight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!  33 years ago, I was the pesky, unatheletic,
-				</font><br>
+				<p align="justify"><font size=2">
+				<a id="uniqueid" href="Origin.html">The story of "The Mackenzie  Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an air-tight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!
+				</a></font><br>
+				<hr id='hrdotted' />
 			</div>
-			<!--	<hr id='hrdotted' />  -->
+
 
 	</div>
 
