--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     </div>
 		<p align = "left"><b><font size="4">Synopsis</font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+			<div style="width: 80px; float:left; margin:4; "><img src="Synopsis.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="Synopsis.html">As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He's well respectedas a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable - albeit neurotic - best friend. But Mack Dylan carries his share of baggage - a repressed
@@ -111,7 +111,7 @@
 			</div>
 
 		<p align = "left"><b><font size="4">Origin</font></b>
-			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
+			<div style="width: 80px; float:left; margin:4; "><img src="Origin.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="Origin.html">The story of "The Mackenzie  Dylan Show" is essentially a story of friendship. I've known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an air-tight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!
