--- a/Origin.html
+++ b/Origin.html
@@ -38,89 +38,89 @@
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 The story of "The Mackenzie Dylan Show" is essentially a story of friendship. I’ve known Co-Creator Vincent Marino for 33 years. It was from his "Creative Vagina" (zip locked in an airtight placenta) that the amazing, original idea of a neurotic malcontent who must work out his family issues with an "imaginary" David Letterman-esque talk show sprang!  33 years ago, I was the pesky, unatheletic, weirdo kid 2 years younger who was drawn to the older, cooler, jockey guy-temperamental but essentially kind. The older guy humored the awkward protégé but the years would evolve the relationship from "tolerance" to a mutually kindred friendship.The neighbors of a Stamford, CT. apartment complex became roommates in South Florida and eventually I’d be honored to be the best man at his wedding. The foundation of it all was our mutual capacity to dream big and the exchanging of ideas-late night bull sessions where the solving of the world’s problems coincided with the next great American screenplay.
-
+<p>
 Vince always had the dexterity for stringing words together in a cohesive and melodic (and prolific) fashion. (An excellent poet he once emerged from the rest room from our swinging bachelor pad In West Palm Beach proclaiming "While I was taking a shit, I wrote a sequel to 'The Iliad'" - I told you the boy works quick.)
-
+<p>
 I also had creative outlets; Rock bands in my youth were paramount. However around '90-'91 I collaborated on a screenplay with another old friend in Portland, Or. with delusions of breaking the Sundance club dancing in my head. For a variety of reasons the script never got produced but it did have a modest fan club and passed a few hands. It inspired Vince to craft a few himself more or less as a writing exercise.  In 2003, now living in the Midwest, I receive a package from "The Big Guy"- a one act play entitled "Release" along with a short message asking me to let him know what I think. The concept blew me away-it was sooo original-I've never seen anything like it and I immediately thought of it’s potential as a "Meta-concept"- a show within a show where satirical sketches and a monologue would tie in to the story’s context!
-
+<p>
 Fast forward, 10 years later. I'm back in Connecticut and your author is not a happy camper. I'm middle aged, depressed and recently unemployed from a job that succeeded in sucking my soul like a viper drains venom. I'm not doing what I should be doing and I know it. Yet my mind keeps going back to the same touchstone:
-
+<p>
 "Damn, that Vin Marino story about the curmudgeon with the imaginary talk show is such a cool idea! It has potential as a cutting edge web series and it's so much cheaper to shoot in digital these days"      I vow I will do a creative project in 2011!
-
+<p>
 First call: Marino!
-
+<p>
 MARINO: Oh good, I'm glad you called..listen when you're measuring your cock do you start from the base of your balls? or do you start all the way back to the taint?
-
+<p>
 PIRRO: Forget about that. Do you remember that idea you had during one of your ether induced hallucinations? About theguy with the imaginary talk show?
-
+<p>
 MARINO: I've had lots of psychotic episodes over the past 10 years, can you narrow it down?
-
+<p>
 (From the distance came the voice of Vincent's bride- Mrs. Marino)
-
+<p>
 MRS. MARINO: VINNY! LOWER YOUR VOICE..THE NEIGHBORS WILL KNOW YOU'RE ITALIAN!
-
+<p>
 MARINO: (to me) Hold on! (To the Mrs.) WHEN'S THAT BLOODCLOT GOING TO MOVE FROM YOUR LEG TO YOUR FRONTAL LOBES?….CEREBRAL HEMMARAGE…BRING ME PEACE!  (To me) Sorry about that..she's missing key dialogue concerning the complex plot line of "Murder She Wrote"!  Let me get this straight...you want to shoot a T.V. show-but it's NOT a T.V. show..it's for that new fangled 'interwebz'..based on an idea I had 10 years ago?
-
+<p>
 MRS. MARINO: VINNY, QUIET PLEASE!!
-
+<p>
 MARINO: (To Mrs. M) OKAY YOU CAN DIE NOW!!(After 20 minutes of interactive diatribes between the Marino's that remind me of a psychotic exchange between Norman Bates and his mother on the Director's cut of "Psycho", Marino retreated to his hermetically sealed cavern of silence where a plan was hatched.)
-
+<p>
 We agreed to an 8 part series and the format and quickly popped out 5 scripts. Each show deftly juxtaposing the real world with imaginary show seasoned with enough biting satire as subtle as a right cross to an infant’s head. We agreed to pool our resources to finance a pilot. This meant that Vince could no longer collect Cashmere sweaters and Faberge eggs. Ihad to curtail my anal bleachings to just 2 a week. We figured a pilot would be the best way to either: Pitch the concept to hipper alternative networks or : secure the funding for the restof the series.
-
+<p>
 I would call in a few favors from friends including a drummer pal of mine to lead our imaginary Band Of Make Believe-Chris Nicolo (MUCH more on him in a bit!)
-
+<p>
 An actress I knew would host these networking dinners everyweek-one of which I crashed. There I reignited an old acquaintance that was  intrigued by the concept and hooked us with "The 2 Petes" out of Boston to shoot and record the thing. I also drafted my college-aged cousin Gary Ahmed ,already a vet of several local music videos to the shoot as well.
-
+<p>
 It all pulled together so quickly-6 months from inception to the initial shooting in October. (In full disclosure the relationship with the liaison didn't work out so great. There were too many cooks in the kitchen and quite frankly I was the only one who co-wrote the recipe!)
-
+<p>
 In an inspired moment, Vince signed up for the BACKSTAGE website, a fantastic resource for seeking and scouting talent. Now we could examine headshots and most importantly view demo reels of actors who fit the character type. (Aspiring filmmakers, I cannot recommend this resource enough and I will pass along the sage advise of every Indy director I spoke with during my research: Unless you personally are aware of an actor’s ability NEVER invite an actor to an audition  without viewing a demo reel EVER! The second most repeated mantra amongst guerilla directors? Never let an actor view rough editsor rushes before the final cut-their neuroses will drive you crazy!) We held auditions at my home base of Danbury, Ct and ..HOLY SHIT..people actually came!
-
+<p>
 Marino was (and still is) extremely protective of Macky D. who is essentially his literary alter ego. He took the initiative to scan the Backstage site for Mackenzie types. He stumbled on Andrew Valins, Tampa born and bred now a New Yorker. With his Heath Ledger like good looks, Vince felt that Drew best encapsulated the physical characteristics of the characterwe envisioned. His demo reel left no doubt of his skills, facilitating deftly between personalities.
-
+<p>
 Drew could not make it to the Danbury auditions so he sent along a video through vimeo-an interpretation of the pilot’s dinner scene with his pal Jim, mostly scripted by Vince. Drew nailed it-flat out hit it out of the park. He BECAME our character. Vince’s reaction to Drew’s audition is probably my favorite memory from all of this. I had warned Vince that there’s no bigger high for a writer than your words and character coming to life by an incredible actor. I had experienced this years ago at auditions for the aborted Portland project. The night he watched Drew’s audition, he called me. Vince's voice was about 3 octives higher like a 3 year old who has to find a bathroom-NOW!
-
+<p>
 "He was just incredible", shouted Vince enthusiastically.  "I have no idea where I'm driving-I could be in Daytona.. Tampa…I just couldn't sit still after watching THAT!"  Drew WAS Macky D!
-
+<p>
 <b>1 1:  The Miracle (Part 1)</b>
-
+<p>
 Reaction to the show’s concept has always been of two extremes. It’s either "Wow..that’s really original" or "I’m sorry?..Do I know you?...SECURITY!!!"
-
+<p>
 Most of the time its been the former-including an endorsement from an esteemed Indy director who worked with 3... count 'em 3 Academy Award Winners in one of his projects. However, when I was researching for this project, the first person I spoke to was the first person I knew who shot his own film-My childhood friend Dave "Smoochy" Walker.
-
+<p>
 Dave point blank told me when I started, "The only 2 people when it’s all said and done who will be passionate and committed to this project are you and Vince. Your friends and every one else won't really give a shit."
-
+<p>
 That’s why I consider it a miracle that a third lane merged into The Mackenzie Dylan highway. A man who has shown an almost religious fervor for this project-"Garlic Breath" Chris Nicolo. Even before I broached the subject with Vince about revising the idea, I realized that Chris represented the show’s true demographic-an educated but free thinking guy, someone sardonic and nonconformist who loved the  social satire of people like George Carlin and Bill Hicks. Chris was my guinea pig-although he preferred to be known as an "Italian-American" pig.
-
+<p>
 We met back in '94 when I managed him at a record store. We hit it off as kindred spirits with the same music interests and common heroes in Carlin and Frank Zappa. We both came from similar Dysfunctional Italian Background(even the same ancestral origin Calabria, Italy!)  Our commonalities became aninside joke between us:
-
+<p>
 "What? You also enjoy receiving a reach around from a sore riddled hobo? ME TOO!"
-
+<p>
 It was Chris’s unexpected enthusiasm that was a personal catalyst . "Shit" thought, "Maybe I'm on to something!"
-
+<p>
 Chris drank Vince's and my kool aid in one gulp and, without prompting, hit the ground running. The guy put together The Band Of Make Believe while composing the fake show's "theme" and musical segues, not to mention incidental music for the "real world" segments! Not only did he help me organize auditions but he got his sister to let us use her apartment to double as Mac's bachelor pad (no doubt thru use of incriminating photos). Most importantly he called in some favors and contacts to get the theatre in Ridgefield where we shot all the "talk show" segments. He even drafted his cousin Frank, a former New York stage actor, now in advertising, to come out of retirement to play Mac's estranged boss Henry Cooper.
-
+<p>
 Vince and I were so impressed by Chris's devotion and positive attitude that we elevated him to partnership status( and with THREE Italians it’s now even more fun trying to get a word in edgewise. MADONN' we never shut the fuck up!)
-
-1 11 The Miracle (Part 2)
-
+<p>
+<b>1 11 The Miracle (Part 2)</b>
+<p>
 I can tell you from personal experience from the various projects I’ve been involved in, is that people have the best intentions but rarely come through. It’s human nature "Oh don’t worry..I’ll make those fliers for you" and it never happens because good intentions walk if money doesn't talk.  That's what makes the productivity of our Production manager Michael Fortunato more miraculous. This guy became our MVP!-our troubleshooter. He busted his ass on 3 location shoots and made things happen…FOR FREE! Let me tell you aspiring Indy film makers—THIS NEVER HAPPENS!
-
+<p>
 Fortunato became involved through our mutual friend, cast member Michael Lupinacci. One day stressed to the max and inneed of extras for both the “protest” scene and the tea party rally, I dialed Fortunato in a blind panic. With Zen like calm, hereassured me he could wrangle the extras and by God he did. When he would routine come up with problem solvers with nothing more than a smile on his face we knew we had a God send.
-
+<p>
 During the theatre shoot no one worked harder and was more focused than Michael-creating sets from scratch and getting shit done. A handicap with the theatre was the size of the stage wouldn’t allow the band and the desks to be on stage at the same time (Holy Cutaway Shots,Batman) but the guy never complained he just did the work-the paisan equivalent of a mensch!
-
+<p>
 Actually , Michael was responsible for the most guerilla moment of the shoot-the scene in the pilot where the waitress recalls to Mac how she accidentally sent an obscene pizza to a priest( a cameo by our sound guy the much beloved “Re-Pete” Grobin!) With time not our ally I had an idea that the priest open an ornate and gothic door to receive the delivery. I had no idea where that was going to be. Driving from the previous location in Greenwich, Ct through our hometown of Stamford, Michael found inspiration. “ I know the place” he chimed.We proceeded to a 2-story gothic like mansion, which now served as a multi rooming house. Fortunato cased the joint likea master burglar making sure no one was in the reception area. We hustled our meek priest in, prepared our alibi if we got caught while the other Pete-the DP got 3 takes of Re-Pete the priest opening up the ornate gothic door.From conception to execution it took 10 minutes tops.
-
+<p>
 By the time we shot the “talk show” segments in jan. of 2012, most of the real world stuff barring some pick-ups was in the can. Our cast was complete with the wonderful Shannon Veedok as Mac’s Best Friend and emotional counterpart Jim. Another New Yorker, by way of DC, Shannon Has an impressivelists of credentials including a dozen or so stints on “Saturday Night Live”.   Michelle Rae played Mac’s long-suffering ex-fiancé Karen Mancini. A true pro with great instincts she was brought to my attention by my sister Amy who is her close childhood friend.  Of course in the role of the first talk show guest was the incomparable Michael Lupinacci in the part he was born to play, Jesus Christ!
-
+<p>
 Drew once confided that he had ambivalent feelings about the character he was playing. He thought Mac was kind of a jerk, selfish, perhaps a little too sharp with the tongue  towardhis pal Jim. His primary interest was doing the talk show segments particularly the monologue. Marino wrote all the monologue jokes-brilliantly I might add. ( I tried but I confess  Isuck at it-I’m better at thinking  conceptually hence sketches are my bag) By the way, Drew used Jon Stewart as the template for delivering his jokes and GOD DAMMIT-he aced that too!
-
+<p>
 I will defend the personal character of our main character. Yes, Mac has personality flaws. His edges are rough it’s a cynical candy coating around a softer moral center. Mac’s a moralist, is generally for fair play especially when it comes to the little guy and most importantly he values and has integrity. He grew up entranced by the lives of Muhammad Ali and his namesake Bob Dylan who stuck to their ideals. Mac is asymbol of a counter culture that no longer exists like when Rock and Roll was equated with revolution. He’s influenced by that mentality. He ponders if a contemporary sports hero would sacrifice millions in endorsements to speak out against the Gulf War, the way Ali did with Vietnam. Probably not-hell Tiger Woods wouldn’t sacrifice his endorsements for Pussy!
-
+<p>
 Mac’s a prober and provoker ,obsessed by truth  even if today’s kid’s are more obsessed by video games. The pilot and this website begin the deconstruction of this complicated but charismatic  character. Many Thanks for your interest and to the people who helped us along.
-
-Your Fucking Pal,
-“Fuck Face” Ted Pirro
+<p>
+Your Fucking Pal,<br>
+"Fuck Face" Ted Pirro
 <p>
 <p>
 <font size="4"><a href="index.html">Return to the Home Page</a></font>
