--- a/index.html
+++ b/index.html
@@ -74,16 +74,12 @@
 				<hr id='hrdotted' />
 			</div>
 
-		<p align = "left"><b><font size="4">Monthly Feature</font></b>
+		<p align = "left"><b><font size="4">MARCUS BACHMAN'S HETERO HOUSE: WHERE "GAY" IS A FOUR-LETTERED WORD</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">Monthly Feature
-				</font><br>
-				<br>
-				<br>
-   				<br>
-				<br>
-   				<br>
+				<p align="justify"><font size=2">
+				<a id="uniqueid" href="20140901Feature.html">It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.<br>"Is your son a sissy? Has he gone down so much he has Stretch marks on his forehead?
+				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
 
