--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">
-				<a id="uniqueid" href="20140901Feature.html">It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.<br>"Is your son a sissy? Has he gone down so much he has Stretch marks on his forehead?
+				<a id="uniqueid" href="20140901Feature.html">It's one of those surrealistic images you view pre-dawn on Late, Late night programming or a UHF religious station. A man in dubiously decorated military attire barks at the camera and gestures powerfully.<br>"Is your son a sissy? Has he gone down so much he has stretch marks on his forehead?  Is the only way
 				</a></font><br>
 				<hr id='hrdotted' />
 			</div>
