--- a/index.html
+++ b/index.html
@@ -93,10 +93,11 @@
 				<hr id='hrdotted' />
 			</div>
 
-		<p align = "left"><b><font size="4">About The Creators</font></b>
+		<p align = "left"><b><font size="4">The Cast And Crew</font></b>
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">About The  Creators
+				<p align="justify"><font size=2">
+				<a id="uniqueid" href="LupeBio.html">Michael Lupinacci</a>
 				</font><br>
 				<br>
 				<br>
