--- a/LupeBio.html
+++ b/LupeBio.html
@@ -39,9 +39,9 @@
 <img src="LupeBioPic.jpg"></img>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
-Michael Lupinacci is not an actor . In fact he's the only non-professional actor in "The Mackenzie Dylan Show" cast. However he was the first and only choice for the role he was born to play -Jesus Christ, the first guest on Mackenzie’s imaginary talk show. (Also when I asked him to do it he replied "Sure, I already have the costume on the back seat of my car"-Really, I can't make this shit up!)
+Michael Lupinacci is not an actor . In fact he's the only non-professional actor in "The Mackenzie Dylan Show" cast. However he was the first and only choice for the role he was born to play -Jesus Christ, the first guest on Mackenzie's imaginary talk show. (Also when I asked him to do it he replied "Sure, I already have the costume on the back seat of my car"-Really, I can't make this shit up!)
 <p>
-   He's not Olivier but he is an engaging, charismatic, larger than life personality who could do what I needed him to do. We've known each other for 20 years and I can describe him as both an adventurer and a philosopher (Fancy word for "Opinionated Wop" -in fact anyone within 50 paces of an Italian/American should be warned of the following credo "Everybody’s entitled to my opinion!")
+   He's not Olivier but he is an engaging, charismatic, larger than life personality who could do what I needed him to do. We've known each other for 20 years and I can describe him as both an adventurer and a philosopher (Fancy word for "Opinionated Wop" -in fact anyone within 50 paces of an Italian/American should be warned of the following credo "Everybody's entitled to my opinion!")
 <p>
    The single best descriptive adjective however is "Perpetual".  The dude is always in perpetual motion, rarely sleeps and usually channels that energy on his Harley Road King Cruiser, taking off at a moments notice for parts unknown seeking.. something.. but doing it and not being passive in life.
 <p>
