--- a/Origin.html
+++ b/Origin.html
@@ -103,7 +103,7 @@ Vince and I were so impressed by Chris's devotion and positive attitude that we 
 <p>
 <b>1 11 The Miracle (Part 2)</b>
 <p>
-I can tell you from personal experience from the various projects I've been involved in, is that people have the best intentions but rarely come through. It's human nature "Oh don’t worry..I'll make those fliers for you" and it never happens because good intentions walk if money doesn't talk.  That's what makes the productivity of our Production manager Michael Fortunato more miraculous. This guy became our MVP!-our troubleshooter. He busted his ass on 3 location shoots and made things happen...FOR FREE! Let me tell you aspiring Indy film makers—THIS NEVER HAPPENS!
+I can tell you from personal experience from the various projects I've been involved in, is that people have the best intentions but rarely come through. It's human nature "Oh don't worry..I'll make those fliers for you" and it never happens because good intentions walk if money doesn't talk.  That's what makes the productivity of our Production manager Michael Fortunato more miraculous. This guy became our MVP!-our troubleshooter. He busted his ass on 3 location shoots and made things happen...FOR FREE! Let me tell you aspiring Indy film makers-THIS NEVER HAPPENS!
 <p>
 Fortunato became involved through our mutual friend, cast member Michael Lupinacci. One day stressed to the max and inneed of extras for both the "protest" scene and the tea party rally, I dialed Fortunato in a blind panic. With Zen like calm, hereassured me he could wrangle the extras and by God he did. When he would routine come up with problem solvers with nothing more than a smile on his face we knew we had a God send.
 <p>
