--- a/Synopsis.html
+++ b/Synopsis.html
@@ -37,7 +37,7 @@
 <p align = "left"><b><font size="5">Synopsis</font></b>
 </p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
- As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He’s well respectedas a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable  –albeit neurotic-best friend. But Mack Dylan carries his share of baggage-a repressed childhood, an inability to express emotions, a failed engagement and a tendency not to deal with his disappointments. When life overwhelms Mackenzie Dylan that's when the 'real world' takes a station break and "The Mackenzie Dylan Show" goes on the air! "The Mackenzie Dylan Show" is the imaginary talk show 'broadcast' exclusively inside Mack’s head! It’s an irreverent, internal gabfest were the host puts his neurosis into perspective.
+ As he approaches the threshold of middle age, Mackenzie Dylan looks like a guy who has it all. He's smart, funny and handsome. He's well respected as a successful New York Daily News political columnist. He lives in a beautiful Manhattan apartment and has an inseparable -albeit neurotic- best friend. But Mack Dylan carries his share of baggage-a repressed childhood, an inability to express emotions, a failed engagement and a tendency not to deal with his disappointments. When life overwhelms Mackenzie Dylan that's when the 'real world' takes a station break and "The Mackenzie Dylan Show" goes on the air! "The Mackenzie Dylan Show" is the imaginary talk show 'broadcast' exclusively inside Mack's head! It's an irreverent, internal gabfest were the host puts his neurosis into perspective.
 <p>
  Nothing is safe from Mackenzie's acerbic wit and pointed truth bearing observations on his guest panel. Pop culture, politics, social culture, his relationships, his distant father, his superficial, elitist mother as well as his over achieving ex-fiance are all queried to help him reveal what makes him tick!
 <p>
@@ -74,11 +74,11 @@
 <p>
  <b>Episode 3: MOTHER OF INVENTION</b>
 <p>
- Police brutality against an unarmed African immigrant inspires a scathing "sketch" on Mack's inner "talk show" as well as reunites him with ex-fiance ACLU lawyer Karen who is handling the case. A less satisfying reunion is the one between Mack and his uber conservative and elitist Mother. Forced to connect for a dying relative, the complex and passive – aggressive nature of their relationship opens up old wounds and reveals a vulnerable side to Mack's detached demeanor. Naturally all these issues are projected on to the special "Mother's" edition of Mack's "Talk Show" featuring a personable panel of Ghengis Kahn, Rock Legend Jim Morrison , Return visitor Jesus Christ-and their Mothers!
+ Police brutality against an unarmed African immigrant inspires a scathing "sketch" on Mack's inner "talk show" as well as reunites him with ex-fiance ACLU lawyer Karen who is handling the case. A less satisfying reunion is the one between Mack and his uber conservative and elitist Mother. Forced to connect for a dying relative, the complex and passive - aggressive nature of their relationship opens up old wounds and reveals a vulnerable side to Mack's detached demeanor. Naturally all these issues are projected on to the special "Mother's" edition of Mack's "Talk Show" featuring a personable panel of Ghengis Kahn, Rock Legend Jim Morrison , Return visitor Jesus Christ-and their Mothers!
 <p>
  <b>Episode 4: DOMO ARRIGATO, BEBE REBOZZO</b>
 <p>
-Optimism is in the air: Mack's neurotic best friend Jim has found true love with earnest "performance artist/liberal activist" Bebe Rebozzo-and in the process turns kinky sex into an "art piece". Meanwhile a rejuvenated Mack is set to launch his own uncensored website and blog on HIS terms. But fate takes twisted turns for the lifelong friends including a development with Mac’s ex Karen, an irate John McEnroe and a Murderous Gang of Heavy Metal Aborigones who attempt to high jack the imaginary "talk show".
+Optimism is in the air: Mack's neurotic best friend Jim has found true love with earnest "performance artist/liberal activist" Bebe Rebozzo-and in the process turns kinky sex into an "art piece". Meanwhile a rejuvenated Mack is set to launch his own uncensored website and blog on HIS terms. But fate takes twisted turns for the lifelong friends including a development with Mac's ex Karen, an irate John McEnroe and a Murderous Gang of Heavy Metal Aborigones who attempt to high jack the imaginary "talk show".
 <p>
 <b>Episode 5: MATTERS OF THE HEART</b>
 <p>
@@ -94,7 +94,7 @@ The penultimate episode begins with Mac stricken deliriously with the flu. This 
 <p>
 <b>Episode 8: FINALE</b>
 <p>
-This is it! The series finale where all the questions will be answered-but the answers will be questioned! As Mac becomes more alienated from his emotions, his real world and his fantasy world are spiraling toward a volatile collision! Will Mac survive the collateral damage? Can Mac repair the broken contacts with Jim? Will he reconcile his intimacy issues with Karen? Will Chris Nicolo's "tell all" book "sink" the "talk show"? Will Vanessa giving up weed lead to immigration reform? Will the finale end abruptly and cheesy with "Journey" blaring on the soundtrack? Hell – you've gotten this far – you might as well see how it ends!
+This is it! The series finale where all the questions will be answered-but the answers will be questioned! As Mac becomes more alienated from his emotions, his real world and his fantasy world are spiraling toward a volatile collision! Will Mac survive the collateral damage? Can Mac repair the broken contacts with Jim? Will he reconcile his intimacy issues with Karen? Will Chris Nicolo's "tell all" book "sink" the "talk show"? Will Vanessa giving up weed lead to immigration reform? Will the finale end abruptly and cheesy with "Journey" blaring on the soundtrack? Hell - you've gotten this far - you might as well see how it ends!
 <p>
 <p>
 <font size="4"><a href="index.html">Return to the Home Page</a></font>
