--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
 				<hr id='hrdotted' />
 			</div>
 
-         <p align = "left"><b><font size="4">A Word From Vin Marino</font></b>
+         <p align = "left"><b><font size="4">Photo Gallery</font></b>
           	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
-				<p align="justify"><font size=2">I co-wrote  & co-created 'The Mackenzie Dylan Show'. Writing is special for it brings me joy, is the one activity  not involving a repetitive hand motion where I possess some level of talent, and I can do it sitting on  my lazy ass. My writing inspirations are Neil Peart, Robert Altman, and anyone ever staffed on, 'The  Larry Sanders Show'. Pizza is yummy and Patti Smith transcends cool - Bye
-				</font></p>
+				<p align="justify"><font size=2">
+				<a id="uniqueid" href="PhotoGallery.html">Here's some "behind the scenes" shit to keep your mind occupied
+				</a></font></p>
 				<hr id='hrdotted' />
 		  	</div>
 
@@ -97,6 +98,8 @@
 			<div style="width: 80px; float:left; margin:4; "><img src="FredFlipoff.jpg" width="80px" height="80px"></div>
 			<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">
+				<a id="uniqueid" href="VinBio.html">Vincent Marino</a>
+				</font><br>
 				<a id="uniqueid" href="LupeBio.html">Michael Lupinacci</a>
 				</font><br>
 				<br>
