--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 
          <p align = "left"><b><font size="4">Photo Gallery</font></b>
-          	<div style="width: 80px; float:left; margin:4; "><img src="VinBio.jpg" width="80px"></div>
+          	<div style="width: 80px; float:left; margin:4; "><img src="Scene1.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="PhotoGallery.html">Here's some "behind the scenes" shit to keep your mind occupied
