--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			</div>
 
          <p align = "left"><b><font size="4">Photo Gallery</font></b>
-          	<div style="width: 80px; float:left; margin:4; "><img src="Scene1.jpg" width="80px"></div>
+          	<div style="width: 80px; float:left; margin:4; "><img src="Scenes1.jpg" width="80px"></div>
           	<div style="display: inline-block; width: 290px;>
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="PhotoGallery.html">Here's some "behind the scenes" shit to keep your mind occupied.  Feel free to jerk off on some pics of Mack Dee and his buddies, including the incomparable Chris Nicolo.  View in wonderment the photos of Michelle Rae, Shannon Veedok and Andrew Valins doing nothing.
@@ -100,6 +100,7 @@
 				<p align="justify"><font size=2">
 				<a id="uniqueid" href="VinBio.html">Vincent Marino</a>
 				</font><br>
+				<p align="justify"><font size=2">
 				<a id="uniqueid" href="LupeBio.html">Michael Lupinacci</a>
 				</font><br>
 				<br>
