--- a/PhotoGallery.html
+++ b/PhotoGallery.html
@@ -36,8 +36,6 @@
 
 <p align = "left"><b><font size="5">Photo Gallery</font></b>
 <p>
-<img src="VinBio.jpg"></img>
-</p>
 <div align="justify" style="width: 900px; float:left; margin:4; ">
 <img src="Scenes1.jpg"></img>
 <p>
@@ -57,9 +55,9 @@
 <p>
 <img src="1976ToppsTradedDylan.jpg"></img>
 <p>
-<img src="Newstand.jpg"></img>
+<img src="Newstand.jpg" width="800px"></img>
 <p>
-<img src="ZombieChrist.jpg"></img>
+<img src="ZombieChrist.jpg" width="800px"></img>
 <p>
 <p>
 <font size="4"><a href="index.html">Return to the Home Page</a></font>
